# haskell-exercises

./: Readme.md  haskell-exercises.cabal
app/: Main.hs
src/Homework1/: CreditCards.hs  Hanoi.hs
src/homework_1/: CreditCards.hs  credit_cards.hs
test/Homework1/: CreditCardsSpec.hs  HanoiSpec.hs
test/homework_1/: CreditCardsSpec.hs
