name:                haskell-exercises
version:             0.1.0.0
synopsis:            Some exercises in learning haskell
description:         Please see README.md
homepage:            http://github.com/alexadewit/haskell-exercises
license:             BSD3
license-file:        LICENSE
author:              Alexandra DeWit
maintainer:          alexa.dewit@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  ghc-options:         -Wall
  hs-source-dirs:      src
                     , src/homework_1
  exposed-modules:     Lib
                     , CreditCards
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable haskell-exercises-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , haskell-exercises
  default-language:    Haskell2010

test-suite haskell-exercises-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-exercises
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alexadewit/haskell-exercises
